# three-d

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  README.md  build  build.rs  buildToWeb  clean  deny.toml  flake.nix  index.html  toJS  toWasm
.github/: FUNDING.yml
.github/workflows/: rust.yml
assets/shaders/: triangle.vert
examples/: README.md  color_material.rs  deferred.rs  effect.rs  foam_loader.rs  hello_world.rs  lighting.rs  main.rs  morph.rs  run_all.sh  scene_objects.rs  screen_capture.rs  simulation_material.rs  simulation_visualisation.rs  spider.rs  text.rs  texture.rs  texture_material.rs  triangle_material.rs  window_handler.rs  wireframe.rs
examples/animation/: Cargo.toml
examples/assets/: C60Small.vol  COLOMBE.mtl  Gledista_Triacanthos.mtl  PenguinBaseMesh.mtl  Tree1.mtl  attribution.md  hand.pcd  penguin.3d  pfboy.mtl  sphere.dae  suzanne.3d
examples/camera_view/: Cargo.toml
examples/dae-test/: Cargo.toml  main.rs
examples/effect/: Cargo.toml  example.rs  main.rs  run
examples/egui_gizmo/: Cargo.toml
examples/environment/: Cargo.toml  main.rs
examples/fireworks/: Cargo.toml  main.rs  run
examples/fireworks/src/: lib.rs  main.rs  particles.frag
examples/fog/: Cargo.toml  main.rs  run
examples/forest/: Cargo.toml  main.rs  run
examples/fxaa/: Cargo.toml  main.rs  run
examples/headless/: Cargo.toml  main.rs
examples/heightmap/: Cargo.toml
examples/hello_world/: Cargo.toml  build  index.html  main.rs  run
examples/image/: Cargo.toml  main.rs  shader.frag
examples/image/src/: main.rs  shader.frag
examples/imposters/: Cargo.toml  example.rs  main.rs  run
examples/imposters/src/: main.rs
examples/instanced_core/: Cargo.toml
examples/instanced_draw_order/: Cargo.toml
examples/instanced_shapes/: Cargo.toml
examples/lighting/: Cargo.toml  example.rs  main.rs  run
examples/lights/: Cargo.toml  example.rs  lights.rs  main.rs  web.rs
examples/lights/src/: lib.rs  lights.rs  main.rs
examples/lines/: main.rs
examples/logo/: Cargo.toml  main.rs
examples/mandelbrot/: Cargo.toml  main.rs  run
examples/materials/: color_material.rs  mod.rs  monkey.rs  texture_material.rs
examples/morph/: Cargo.toml  main.rs  run
examples/multisample/: Cargo.toml
examples/multiwindow/: Cargo.toml
examples/normals/: Cargo.toml  main.rs
examples/particles/: Cargo.toml  main.rs  run
examples/pbr/: Cargo.toml  main.rs
examples/picking/: Cargo.toml  main.rs
examples/picking_instances/: Cargo.toml
examples/point_cloud/: Cargo.toml
examples/scene_objects/: environment.rs  grass.rs  mod.rs  monkey.rs  skybox.rs  spider.rs  terrain.rs  textured_box.rs  triangle.rs  water.rs
examples/screen/: Cargo.toml
examples/shapes/: Cargo.toml  main.rs
examples/shapes2d/: Cargo.toml  main.rs
examples/simple/: main.rs
examples/sprite/: main.rs
examples/sprites/: Cargo.toml
examples/statues/: Cargo.toml  main.rs  run
examples/terrain/: Cargo.toml
examples/terrain/src/: main.rs
examples/text/: Cargo.toml
examples/text_editor/: Cargo.toml
examples/texture/: Cargo.toml  main.rs  run
examples/texture/src/: main.rs
examples/triangle/: Cargo.toml  main.rs  run  web.rs
examples/triangle_core/: Cargo.toml
examples/volume/: Cargo.toml
examples/web/: Cargo.toml  build
examples/web/src/: lib.rs
examples/web/www/: index.html  index.js  package-lock.json  webpack.config.js
examples/winit_window/: Cargo.toml
examples/wireframe/: Cargo.toml  example.rs  main.rs  run
lib/Gust/: Cargo.toml
lib/core/: Cargo.toml
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs  ogl.rs  wgl2.rs
lib/io/: Cargo.toml
lib/simplex/: Cargo.toml  LICENSE-MIT
lib/simplex/src/: gradient.rs  lib.rs  math.rs  permutationtable.rs
lib/window/: Cargo.toml
lib/window/src/: canvas.rs  event.rs  glutin_window.rs  lib.rs
src/: buffer.rs  camera.rs  camerahandler.rs  color.rs  context.rs  control.rs  core.rs  cpu_material.rs  cpu_mesh.rs  deferred.rs  definition.rs  effect.rs  effects.rs  emscripten.rs  eventhandler.rs  frame.rs  function.rs  geometries.rs  gl.rs  gui.rs  input.rs  io.rs  lib.rs  light.rs  lights.rs  loader.rs  main.rs  material.rs  math.rs  misc.rs  model.rs  object.rs  objects.rs  parsers.rs  phong.rs  picking.rs  pipeline.rs  pipelines.rs  program.rs  render_gl.rs  (+14 more)
src/camera/: camera.rs  camera_control.rs  first_person_control.rs  fly_control.rs  orbit_control.rs
src/context/: ogl.rs  shader_type.rs  wgl2.rs
src/control/: camera_control.rs  fly_control.rs
src/core/: aabb.rs  attributes.rs  buffer.rs  camera.rs  color.rs  color_target_texture2d.rs  color_target_texture2d_array.rs  context.rs  cpu_element_buffer.rs  cpu_material.rs  cpu_mesh.rs  cpu_point_cloud.rs  cpu_texture.rs  cpu_volume.rs  data_type.rs  depth_target_texture2d.rs  depth_target_texture2d_array.rs  element_buffer.rs  full_screen_quad.rs  gpu_mesh.rs  image_cube_effect.rs  image_effect.rs  instanced_mesh.rs  light.rs  material.rs  math.rs  mesh.rs  mesh.vert  mesh_generator.rs  mesh_loader.rs  mod.rs  object.rs  particles.rs  program.rs  render_states.rs  render_target.rs  renderable.rs  rendertarget.rs  scissor_box.rs  shader.rs  (+13 more)
src/default_objects/: mod.rs  standard.rs  wireframe.rs
src/definition/: cpu_material.rs  cpu_mesh.rs  cpu_texture.rs  geometry.rs
src/dust/: attribute.rs  buffer.rs  camera.rs  error.rs  input.rs  loader.rs  material.rs  mesh.rs  mod.rs  model.rs  program.rs  resources.rs  scene.rs  shader.rs  state.rs  temp.rs  utility.rs
src/effect/: fog.rs  fxaa.rs  image_effect.rs
src/effects/: copy.rs  debug.rs  debug_effect.rs  fog.rs  fxaa.rs  image_effect.rs  imposter.rs  particles.rs  skybox.rs
src/frame/: input.rs  output.rs
src/function/: pick.rs
src/geometries/: full_screen_quad.rs  mesh.rs  mesh_factory.rs  mesh_loader.rs
src/gl/: ogl.rs  wgl2.rs
src/gui/: egui_gui.rs  painter.rs
src/io/: dae.rs  gltf.rs  loader.rs  obj.rs  parser.rs  saver.rs  texture.rs  threed.rs
src/light/: ambient_light.rs  directional_light.rs  (+2 more)
web/: README.md  index.html  index.js  package.json  webpack.config.js
(+488 files in other folders)
