[package]
name = "three-d"
version = "0.15.0" # Remember to update example links
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"
description = "2D/3D renderer - makes it simple to draw stuff across platforms (including web)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/asny/three-d"
categories = ["graphics", "rendering", "visualization", "wasm", "web-programming"]
keywords = ["3d", "gamedev", "webassembly", "opengl", "webgl"]
exclude = ["/examples", ".gitignore", "index.html"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "wasm32-unknown-unknown"]

[features]
default = ["window"]
window = ["glutin", "winit", "wasm-bindgen", "serde", "serde-wasm-bindgen", "web-sys"] # Window module
egui-gui = ["egui_glow", "egui", "getrandom"] # Additional GUI features 

[dependencies]
glow = "0.11"
cgmath = "0.18"
three-d-asset = "0.4"
thiserror = "1"
winit = {version = "0.27", optional = true}
egui = { version = "0.19", optional = true }
egui_glow = { version = "0.19", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ['Document', 'HtmlCollection', 'HtmlCanvasElement', 'Window'], optional = true }

instant = "0.1.12"

[dev-dependencies]
rand = "0.7"
three-d-asset = {version="0.4", features = ["hdr", "gltf", "obj", "vol", "pcd", "png", "jpeg", "http"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
noise = {version = "0.6", default-features = false}

[[example]]
name = "triangle"
path = "examples/triangle/src/main.rs"

[[example]]
name = "screen"
path = "examples/screen/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "mandelbrot"
path = "examples/mandelbrot/src/main.rs"

[[example]]
name = "shapes2d"
path = "examples/shapes2d/src/main.rs"

[[example]]
name = "shapes"
path = "examples/shapes/src/main.rs"

[[example]]
name = "sprites"
path = "examples/sprites/src/main.rs"

[[example]]
name = "texture"
path = "examples/texture/src/main.rs"

[[example]]
name = "volume"
path = "examples/volume/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "point_cloud"
path = "examples/point_cloud/src/main.rs"

[[example]]
name = "picking"
path = "examples/picking/src/main.rs"

[[example]]
name = "environment"
path = "examples/environment/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "pbr"
path = "examples/pbr/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "lighting"
path = "examples/lighting/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "lights"
path = "examples/lights/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "image"
path = "examples/image/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "fog"
path = "examples/fog/src/main.rs"

[[example]]
name = "fireworks"
path = "examples/fireworks/src/main.rs"

[[example]]
name = "terrain"
path = "examples/terrain/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "statues"
path = "examples/statues/src/main.rs"
required-features = ["egui-gui"]

[[example]]
name = "wireframe"
path = "examples/wireframe/src/main.rs"

[[example]]
name = "forest"
path = "examples/forest/src/main.rs"

[[example]]
name = "normals"
path = "examples/normals/src/main.rs"

[[example]]
name = "headless"
path = "examples/headless/src/main.rs"

[[example]]
name = "logo"
path = "examples/logo/src/main.rs"