[package]
name = "fireworks"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "../../" }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.1"
rand = {version = "0.7", features = ["wasm-bindgen"] }
