[package]
name = "fireworks"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "../../" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
rand = {version = "0.7", features = ["wasm-bindgen"] }
