[package]
name = "terrain"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
three-d = { path = "../../", features=["egui-gui"] }
three-d-asset = {git="https://github.com/asny/three-d-asset",features = ["gltf", "jpeg", "png", "hdr", "http"] }
noise = {version = "0.6", default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
rand = {version = "0.7", features = ["wasm-bindgen"] }
