[package]
name = "texture"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dust = { path = "../../", default-features = false, features=["web"] }
log = "0.4"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "0.1"
