[package]
name = "hello_world_web"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dust = { path = "../../" }
wasm-bindgen = "0.2.33"
rand = {version = "0.6.5", features = ["wasm-bindgen"] }
console_error_panic_hook = "0.1.5"
noise = {git = "https://github.com/Razaekel/noise-rs", branch = "develop", default-features = false}