[package]
name = "gl"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[features]
debug = []

[target.'cfg(not(target_arch = "wasm32"))'.build-dependencies]
gl_generator = {version = "0.14"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WebGlActiveInfo',
  'Performance'
]
