[package]
name = "window"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "../gl" }

[target.'cfg(target_arch = "x86_64")'.dependencies.glutin]
version = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.33"

[features]
debug = []
