[package]
name = "window"
version = "0.1.0"
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>"]
edition = "2018"

[dependencies]
gl = { path = "../gl" }

[target.'cfg(target_arch = "x86_64")'.dependencies.glutin]
version = "0.19.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Node',
  'HtmlElement',
  'HtmlCanvasElement',
  'Window',
  'Event',
  'MouseEvent',
  'EventTarget',
  'WheelEvent',
  'KeyboardEvent',
]

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "0.2.33"
